// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ClickConfirm - example in dockit example in dockit 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="containerID"
  style={Object {}}
  title={null}
>
  <ClickConfirm
    ccrKey={null}
    className={null}
    colorSchema={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuOID"
    key="uuOID"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={[Function]}
    selected={false}
    style={null}
    tooltip={null}
  />
  <TouchIcon
    bgStyle="filled"
    borderRadius={null}
    className={null}
    colorSchema="pink"
    content="open"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    href={null}
    icon="mdi-verified"
    id="uuID"
    ignoreInnerHTML={false}
    key="uuID"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    target="_self"
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.ClickConfirm ccrKey 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm className 1`] = `
<Div
  className="uu5-bricks-click-confirm my-classname uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 1`] = `
<Div
  className="color-schema-default uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 2`] = `
<Div
  className="color-schema-red uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 3`] = `
<Div
  className="color-schema-red uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 4`] = `
<Div
  className="color-schema-red-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 5`] = `
<Div
  className="color-schema-red-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 6`] = `
<Div
  className="color-schema-green uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 7`] = `
<Div
  className="color-schema-green uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 8`] = `
<Div
  className="color-schema-green-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 9`] = `
<Div
  className="color-schema-green-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 10`] = `
<Div
  className="color-schema-yellow uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 11`] = `
<Div
  className="color-schema-yellow uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 12`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 13`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 14`] = `
<Div
  className="color-schema-purple uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 15`] = `
<Div
  className="color-schema-purple uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 16`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 17`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 18`] = `
<Div
  className="color-schema-brown uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 19`] = `
<Div
  className="color-schema-brown uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 20`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 21`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 22`] = `
<Div
  className="color-schema-orange uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 23`] = `
<Div
  className="color-schema-orange uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 24`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 25`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 26`] = `
<Div
  className="color-schema-cyan uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 27`] = `
<Div
  className="color-schema-cyan uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 28`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 29`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 30`] = `
<Div
  className="color-schema-grey uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 31`] = `
<Div
  className="color-schema-grey uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 32`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 33`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 34`] = `
<Div
  className="color-schema-pink uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 35`] = `
<Div
  className="color-schema-pink uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 36`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 37`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm colorSchema 38`] = `
<Div
  className="color-schema-pink uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm controlled 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm controlled 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm controlled 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm controlled 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm default props 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden uu5-common-disabled"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm disabled 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-disabled uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm hidden 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm id 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="myId"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm mainAttrs 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm name 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name="myName"
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 5`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 6`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 7`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 8`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 9`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 10`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 11`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 12`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 13`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 14`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 15`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 16`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 17`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 18`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 19`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm nestingLevel 20`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noIndex 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-noindex uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noIndex 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noIndex 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm noIndex 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-noindex uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm pureRender 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm pureRender 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm pureRender 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm pureRender 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm selected 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden uu5-common-selected"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm selected 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm selected 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm selected 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-selected uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style 2`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style 3`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm style 4`] = `
<Div
  className="uu5-bricks-click-confirm uu5-bricks-click-confirm-shown"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
  tooltip={null}
/>
`;

exports[`UU5.Bricks.ClickConfirm tooltip 1`] = `
<Div
  className="uu5-bricks-click-confirm uu5-common-hidden"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title="My Tooltip"
  tooltip={null}
/>
`;
